--- a/views/addpage.html
+++ b/views/addpage.html
@@ -4,25 +4,45 @@
   <h3>Add a Page</h3>
   <hr>
   <form method="POST" action="/wiki/">
-    
-    <div>PLACEHOLDER FOR AUTHOR NAME FIELD</div>
-    
-    <div>PLACEHOLDER FOR AUTHOR EMAIL FIELD</div>
-    
+
+    <div>
+      <label for="author" class="col-sm-2 control-label">Author Name</label>
+      <div class="col-sm-10">
+        <input name="author" type="text" class="form-control"/>
+      </div>
+    </div>
+
+    <div>
+      <label for="email" class="col-sm-2 control-label">Author Email</label>
+      <div class="col-sm-10">
+        <input name="email" type="text" class="form-control"/>
+      </div>
+    </div>
+
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">Page Title</label>
       <div class="col-sm-10">
         <input name="title" type="text" class="form-control"/>
       </div>
     </div>
-    
-    <div>PLACEHOLDER FOR PAGE CONTENT TEXTAREA FIELD</div>
-    
-    <div>PLACEHOLDER FOR PAGE STATUS INPUT FIELD</div>
+
+    <div>
+      <label for="content" class="col-sm-2 control-label">Page Content</label>
+      <div class="col-sm-10">
+        <textarea rows=10 cols=50 name="content" type="text"></textarea>
+      </div>
+    </div>
+
+    <div class="form-check">
+      <label for="status" class="form-check-label">Show Page</label>
+      <div>
+        <input name="status" type="checkbox" class="form-check-input" value""></input>
+      </div>
+    </div>
 
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
     </div>
-  
+
   </form>
 {% endblock %}
